--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "lorem_ipsum",
+  "name": "ipsumlorem",
   "version": "1.0.0",
   "description": "A package for generating lorem ipsum text",
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/amandeeptherockstar/lorem_ipsum"
+    "url": "https://github.com/amandeeptherockstar/ipsumlorem"
   },
   "keywords": [
     "lorem",
@@ -17,5 +17,5 @@
     "random_text_generator"
   ],
   "author": "Amandeep Kochhar",
-  "license": "ISC"
+  "license": "MIT"
 }
